# Tribal-Wars-Planer

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .requirements.text.swp  DOC.md  DOC.txt  Dockerfile  Dockerfile.cronjobs  Dockerfile.prod  Dockerfile.translation  LICENSE  Makefile  Pipfile  README.md  conftest.py  db.sqlite3  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.richdev.yml  docker-compose.stg.yml  docker-compose.test.yml  docker-compose.translation.yml  docker-compose.yml  initial.prod.sh  initial.sh  install_twp.sh  lint.sh  manage.py  mkdocs.cs.yml  mkdocs.de.yml  mkdocs.en.yml  mkdocs.hu.yml  mkdocs.pl.yml  mkdocs.pt-br.yml  mydatabase  (+8 more)
.github/: dependabot.yml
.github/workflows/: benchmark.yml  build_and_release.yml  dev_image_push.yml  latest_image_push.yml  manual_trigger_latest_build.yml  manual_trigger_stage_build.yml  manual_triggers.yml  push_dockerhub.yml  redeploy_prod_release.yml  stage_image_push.yml  tests.yml  type_check.yml
accounts/: urls.py  views.py
api/: serializers.py  urls.py  views.py
base/: admin.py  apps.py  cron.py  emails.py  forms.py  models.py  run_cronjobs.py  signals.py  tests.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_auto_20200527_2338.py  0002_outline_initial_outline_excluded_coords.py  0003_auto_20200527_2347.py  0003_overview_deputy.py  0004_auto_20200527_2349.py  0004_auto_20201216_2247.py  0005_auto_20200527_2351.py  0005_result_results_export.py  0006_auto_20200527_2357.py  0006_auto_20210120_2128.py  0007_auto_20200601_2242.py  0007_auto_20210127_2222.py  0008_auto_20200601_2311.py  0008_auto_20210205_2111.py  0009_auto_20200603_2045.py  0009_auto_20210218_1528.py  0010_auto_20210228_1831.py  0010_results.py  0011_auto_20210407_1633.py  0011_documentation.py  0012_documentation_main_page.py  0012_outline_choice_sort.py  0013_auto_20210511_1606.py  0013_documentation_title.py  0013_outline_simple_textures.py  0014_auto_20210521_2258.py  0015_auto_20210522_1245.py  0016_weightmaximum_too_far_away.py  0017_auto_20210524_0118.py  0018_alter_outline_initial_outline_target_dist.py  0019_auto_20210601_2112.py  0020_alter_outline_filter_hide_front.py  0021_payment_from_stripe.py  0022_alter_outline_name.py  0023_auto_20210612_2234.py  0024_stats.py  0025_outline_filter_weights_catapults_min.py  0026_auto_20210703_1252.py  0026_outline_sending_option.py  (+110 more)
base/models/: __init__.py  documentation.py  message.py  outline.py  outline_overview.py  outline_time.py  outline_write_lock.py  overview.py  payment.py  pdf_summary.py  period_model.py  player.py  profile.py  result.py  server.py  stats.py  stripe_price.py  stripe_product.py  target_vertex.py  tribe.py  troops_history.py  village_model.py  weight_maximum.py  weight_model.py  world.py
base/static/: base-01-12.css  base-02-12.css  base-1.css  base-11-02-21-7.css  base-13-02-21-0.css  base-13-02-21-0.js  base-17-12.css  base-17-12.js  base-20-01-21.js  base-21-01-21.css  base-29-11.css  base-min-1.css  base-min-1.js  base-min-10062021-1259.js  (+23 more)
config/: config.json  twp_nginx.conf
django_plemiona/: .gitignore  asgi.py  forms.py  settings.py  settings.txt  test_setting.py  urls.py  wsgi.py
docs/: documentation_en.md  documentation_pl.md  indywidual_collection.txt  planer_create_example_en.md  planer_create_example_pl.md  planer_create_info_pl.md  planer_create_marks_en.md  planer_create_marks_pl.md  planer_deff_example_pl.md  planer_deff_info_en.md  planer_deff_info_pl.md  planer_deff_marks_en.md  planer_deff_marks_pl.md  planer_form_example_en.md  planer_form_example_pl.md  planer_form_info_en.md  planer_form_info_pl.md  planer_off_example_en.md  planer_off_example_pl.md  planer_off_info_en.md  planer_off_info_pl.md  planer_off_marks_pl.md  planer_scripts_example_pl.md
metrics/: __init__.py  prometheus-dev.yml
perf/: locustfile.py
plemiona_pliki/: Zbierz_deff.py  basic_classes.py  cele_masowo.py  cron.py  database_update.py  db_pool.py  get_deff.py  get_deff_text.py  get_tribe.py  outline_initial.py  planner_NEW.py  swiat_i_jednostki.py  test_basic_classes.py  test_wioska.py  tests.py  timing.py  wioska.py  zbiorka_grubych_csv_NEW.py  zbiorka_offow_csv_NEW.py
rest_api/: admin.py  apps.py  models.py  overview_data.py  permissions.py  serializers.py  urls.py  views.py
scripts/: expose_metrics_server.py  init_cronjobs.sh  init_webserver.sh  initial.sh  install_twp.sh  license_check.py  push_image_twp_cronjobs.sh  push_image_twp_server.sh  redeploy_env_webhook.sh
shipments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
static/: base.css  codestyler.js
templates/: 404.html  500.html  email_payment.html  email_payment_body.html  email_payment_title.html  otp_email_body_template.html  otp_email_body_template.txt
terraform_gcp_stage/: main.tf  variables.tf
trbial_wars/: cele_masowo.py  database_update.py  get_deff.py  outline_finish.py  outline_initial.py  period_utils.py  planner_NEW.py  target_utils.py  tests.py  weight_utils.py  zbiorka_grubych_csv_NEW.py  zbiorka_offow_csv_NEW.py
tribal_wars/: apps.py  avaiable_troops.py  database_update.py  get_deff.py  input_target.py  outline_complete.py  outline_create_targets.py  outline_finish.py  outline_initial.py  period_utils.py  target_utils.py  weight_utils.py  write_noble_target.py  write_out_outline.py  write_ram_target.py
tribal_wars_planer/: asgi.py  context_processors.py  forms.py  middlewares.py  settings.py  settings_cronjobs.py  test_urls.py  urls.py  wsgi.py
utils/: apps.py  avaiable_troops.py  available_troops.py  buildings.py  database_update.py  fast_weight_maximum.c  fast_weight_maximum.py  get_deff.py  logger.py  outline_complete.c  outline_complete.py  outline_create_targets.py  outline_finish.py  outline_initial.py  outline_troops_analysis.py  send_text.py  write_noble_target.c  write_noble_target.py  write_ram_target.c  write_ram_target.py
webhook/: hooks.example.json  redeploy-stage.sh  redeploy-standard.sh  redeploy.prod.sh  redeploy.sh  redeploy.stg.sh  webhooks.conf
(+631 files in other folders)
