[tool.poetry]
authors = ["rafsaf <rafal.safin@rafsaf.pl>"]
description = "Tribal Wars Planer django app, professional tool for creating outlines for off-game coordinators."
name = "tribal_wars_planer"
version = "5.4.2"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

crispy-bootstrap4 = "^2024.1"
django = "^5.1.1"
django-crispy-forms = "^2.3"
django-registration = "^3.3"
django-ses = "^4.1.1"
djangorestframework = "^3.15.2"

beautifulsoup4 = "^4.12.3"
botocore = "^1.35.15"
cython = "^3.0.11"
diskcache = "^5.6.3"
fpdf = "^1.7.2"
numpy = "^2.1.1"
prometheus-client = "^0.20.0"
psutil = "^6.0.0"
psycopg = { extras = ["c"], version = "^3.2.1" }
python-dateutil = "^2.9.0"
python-dotenv = "^1.0.1"
schedule = "^1.2.1"
scipy = "^1.14.1"
setuptools = "^74.1.2"
stripe = "^10.11.0"
uwsgi = "^2.0.25"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
coverage = "^7.6.1"
django-debug-toolbar = "^4.4.6"
django-stubs = "^5.0.4"
django-stubs-ext = "^5.0.2"
djangorestframework-stubs = "^3.15.0"
djhtml = "^3.0.6"
freezegun = "^1.2.2"
mypy = "^1.11.2"
parameterized = "^0.9.0"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
pytest-django = "^4.9.0"
pytest-xdist = "^3.1.0"
requests-mock = "^1.12.1"
ruff = "^0.6.4"
types-markdown = "^3.7.0.20240822"
types-python-dateutil = "^2.9.0.20240906"
types-pytz = "^2024.1.0.20240417"
types-requests = "^2.32.0.20240907"

[tool.poetry.group.docs.dependencies]
mkdocs = { extras = ["i18n"], version = "^1.6.1" }
mkdocs-glightbox = "^0.4.0"
mkdocs-material = { extras = ["imaging"], version = "^9.5.34" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tribal_wars_planer.settings"
addopts = "-v --cov --no-migrations --cov-report xml --cov-report term-missing -n auto"
minversion = "6.0"
testpaths = ["base", "rest_api", "tribal_wars_planer", "utils"]

[tool.coverage.run]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*__init__.py*",
  "tribal_wars_planer/asgi.py",
  "tribal_wars_planer/wsgi.py",
]
source = ["base", "rest_api", "tribal_wars_planer", "utils"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["E501", "PLR0915", "PLR2004"]
select = ["E", "F", "I", "PL", "UP", "W"]

[tool.ruff.lint.pylint]
max-args = 12
max-branches = 20

[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
# strict = true
check_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tribal_wars_planer.settings"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
