[tool.poetry]
authors = ["rafsaf <rafal.safin@rafsaf.pl>"]
description = "Tribal Wars Planer django app, professional tool for creating outlines for off-game coordinators."
name = "tribal_wars_planer"
version = "5.12.3"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

crispy-bootstrap4 = "^2025.6"
django = "^5.2.6"
django-crispy-forms = "^2.3"
django-registration = "^5.2.1"
django-ses = "^4.3.2"
djangorestframework = "^3.16.1"

beautifulsoup4 = "^4.13.5"
botocore = "^1.40.26"
cython = "^3.1.3"
diskcache = "^5.6.3"
django-otp-yubikey = "^1.1.0"
django-timezone-field = "^7.1"
django-two-factor-auth = { extras = ["phonenumberslite"], version = "^1.17.0" }
drf-spectacular = "^0.28.0"
fpdf = "^1.7.2"
numpy = "^2.3.2"
prometheus-client = "^0.22.1"
psutil = "^7.0.0"
psycopg = { extras = ["c"], version = "^3.2.10" }
python-dateutil = "^2.9.0"
python-dotenv = "^1.1.1"
schedule = "^1.2.1"
scipy = "^1.16.1"
sentry-sdk = { extras = ["django"], version = "^2.37.0" }
setuptools = "^80.9.0"
stripe = "^12.5.1"
uwsgi = "^2.0.30"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.6"
django-debug-toolbar = "^6.0.0"
django-types = "^0.22.0"
djangorestframework-stubs = "^3.16.2"
djhtml = "^3.0.9"
freezegun = "^1.5.5"
mypy = "^1.17.1"
parameterized = "^0.9.0"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-benchmark = "^5.1.0"
pytest-codspeed = "^4.0.0"
pytest-cov = "^6.3.0"
pytest-django = "^4.11.1"
pytest-xdist = "^3.8.0"
requests-mock = "^1.12.1"
ruff = "^0.12.12"
snakeviz = "^2.2.2"
types-markdown = "^3.9.0.20250906"
types-python-dateutil = "^2.9.0.20250822"
types-pytz = "^2025.2.0.20250809"
types-requests = "^2.32.4.20250809"

[tool.poetry.group.docs.dependencies]
mkdocs = { extras = ["i18n"], version = "^1.6.1" }
mkdocs-glightbox = "^0.5.1"
mkdocs-material = { extras = ["imaging"], version = "^9.6.19" }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tribal_wars_planer.settings"
addopts = "--no-migrations"
minversion = "6.0"
testpaths = ["base", "rest_api", "shipments", "tribal_wars_planer", "utils"]

[tool.coverage.run]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*__init__.py*",
  "tribal_wars_planer/asgi.py",
  "tribal_wars_planer/wsgi.py",
]
source = ["base", "rest_api", "shipments", "tribal_wars_planer", "utils"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["E501", "PLC0415", "PLR0915", "PLR2004"]
select = ["E", "F", "I", "PL", "UP", "W"]

[tool.ruff.lint.pylint]
max-args = 12
max-branches = 20

[tool.mypy]
ignore_missing_imports = true
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
# strict = true
check_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tribal_wars_planer.settings"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
